@@ -555,15 +555,17 @@ function applyModifications(page, svgCol, darkUi, src) {
             return;
         }
 
-        copiedVars = copyVars(iframe);
-        content.documentElement.getElementsByTagName("body")[0].classList.add(IS_MOBILE ? "msk-is-touch" : "msk-is-non-touch");
-        if (darkUi) {
-            content.documentElement.getElementsByTagName("body")[0].classList.add("theme--dark");
+        var isLms = new Set(['server', 'player', 'extras', 'lms', 'help']).has(page);
+        if (isLms) {
+            copiedVars = copyVars(iframe);
+            content.documentElement.getElementsByTagName("body")[0].classList.add(IS_MOBILE ? "msk-is-touch" : "msk-is-non-touch");
+            if (darkUi) {
+                content.documentElement.getElementsByTagName("body")[0].classList.add("theme--dark");
+            }
+            fixClassicSkinRefs(content);
+            remapClassicSkinIcons(content, svgCol);
+            addHooks(content);
         }
-        fixClassicSkinRefs(content);
-        remapClassicSkinIcons(content, svgCol);
-        addHooks(content);
-
         iframeInfo.settingModified = false;
         iframeInfo.settingsPage = undefined;
         iframeInfo.settingsSelector = undefined;
